animations likeszone fix overflow and position appearing

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,6 +8,7 @@
 html {
   font-size: 62.5%;
   font-family: "Source Sans Pro", sans-serif;
+  scroll-behavior: smooth;
 }
 
 // Main page components
@@ -185,12 +186,39 @@ html {
   }
   #root {
     padding: 10px 15px 0 15px;
+    max-width: 100vw;
+    overflow: hidden;
     > main {
       width: 100%;
     }
     > aside {
-      display: none;
-      width: 100%;
+      position: absolute;
+      // overflow-y: auto;
+      // height: 100%;
+      // overflow-x: hidden;
+      // overflow-y: scroll; /* has to be scroll, not auto */
+      // -webkit-overflow-scrolling: touch;
+      width: calc(100vw - 30px);
+      // top: 2vh;
+      min-height: calc(100vh - 26px);
+      margin-bottom: 25px;
+      min-width: 230px;
+      border: 4px solid $lblack;
+      background-color: $lblack;
+      margin-top: 0;
+      border-radius: 20px;
+      margin-right: 30px;
+      .likes__header {
+        padding: 15px 0 30px 0;
+      }
+      .likes__main {
+        // border-radius: 20px;
+        // border: 4px solid $white;
+        // background-color: $cultured;
+        min-height: calc(100vh - 26px - 70px);
+        // margin-top: -15px;
+        // padding-bottom: 15px;
+      }
     }
   }
 }
